fix OTHER load case